--- a/TacosSalesNegocio.ipynb
+++ b/TacosSalesNegocio.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe3sm2IpBvm7YXZY/Lx9fH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +44,11 @@
       },
       "source": [
         "\n",
-        "# Proyecto de Minería de Datos – Taco Sales\n",
-        "##  Conocer el Negocio\n",
+        "# Taco Sales\n",
+        "##Conocer el Negocio\n",
+        "\n",
         "**Alumno/as:**\n",
+        "\n",
         " Camila Garcia\n",
         "\n",
         " Jose Heriquez\n",
@@ -223,7 +224,7 @@
         "id": "Lvo6fBc8A5Iv",
         "outputId": "7986779f-6803-496a-e6c7-3d3e30d1535b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -702,7 +703,7 @@
         "id": "k8oGysFsfZsR",
         "outputId": "3e543013-2e2d-44d3-b3d7-5aeda0dc6b07"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -777,7 +778,7 @@
         "id": "2uXlemhBj8p7",
         "outputId": "0956f0a2-5951-46d8-9c87-b925cc52a5d3"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1288,7 +1289,7 @@
       "metadata": {
         "id": "KA6eBbN49puu"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1305,7 @@
         "id": "c3QgDXJ29x-o",
         "outputId": "9404bdf4-cdce-473b-c618-8258669cc9cb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1335,7 @@
         "id": "TWmqNB5dG4Ow",
         "outputId": "e17a9eea-7116-4f35-ad1a-6f2e2c7af419"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
